tests/src/frontend/typechecking/invalid/overridable_const3.sk
base class Foo {
  overridable protected const x: Int = 42;
}

class Bar() extends Foo {
  const x: Int = 43;
}
